--- a/color.ipynb
+++ b/color.ipynb
@@ -154,6 +154,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1773b213-a0b9-4e05-84f2-fdde4af9ec61",
+   "metadata": {},
+   "source": [
+    "Representamos colores. ¿Es buena la representación?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "77ef590d-3960-4a91-b1ed-4a67f180f563",
@@ -207,6 +215,14 @@
     "cplt.plot_single_colour_swatch(\n",
     "    cplt.ColourSwatch(white_sRGB, 'Blanco'),\n",
     "    text_kwargs={'size': 'x-large'});"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66fcb28f-0c39-4e3e-8325-de007639c837",
+   "metadata": {},
+   "source": [
+    "## Balance de blanco"
    ]
   },
   {
@@ -266,20 +282,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cda59627-9960-409e-aa53-733ce01b912d",
+   "cell_type": "markdown",
+   "id": "db42d572-d2c7-4a8b-9fa2-a36c6ea1737c",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc28cba4-d590-4c25-9609-36144f2af30b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Representación en diagrama de cromaticidad"
+   ]
   },
   {
    "cell_type": "code",
@@ -298,17 +306,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<Figure size 640x640 with 1 Axes>,\n",
-       " <AxesSubplot:title={'center':'sRGB\\nCIE 1931 2 Degree Standard Observer - CIE 1931 Chromaticity Diagram'}, xlabel='CIE x', ylabel='CIE y'>)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -338,16 +335,16 @@
     "    standalone=True,\n",
     "    limits=(-0.1, 0.9, -0.1, 0.9),\n",
     "    x_tighten=True,\n",
-    "    y_tighten=True)"
+    "    y_tighten=True);"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "951e822f-758a-487c-ad84-ac9b82ed988c",
+   "cell_type": "markdown",
+   "id": "4b7d96db-ce63-4c13-9f6e-44d1b2d23d63",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Iluminantes"
+   ]
   },
   {
    "cell_type": "code",
@@ -384,46 +381,19 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<Figure size 640x640 with 1 Axes>,\n",
-       " <AxesSubplot:title={'center':'A, B, C, E Illuminants - Planckian Locus\\nCIE 1931 Chromaticity Diagram - CIE 1931 2 Degree Standard Observer'}, xlabel='CIE x', ylabel='CIE y'>)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "cplt.temperature.plot_planckian_locus_in_chromaticity_diagram( ['A', 'B', 'C', 'D', 'E'])"
+    "cplt.temperature.plot_planckian_locus_in_chromaticity_diagram( ['A', 'B', 'C', 'D', 'E']);"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eaea42a1-70d9-4226-aa24-bd4cea0ee28d",
+   "cell_type": "markdown",
+   "id": "a1236ade-2de8-44bc-8f83-88b108369a87",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7efc6f45-bd8d-47ab-9682-689e963b36e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9357c307-80e6-4d9d-85e9-3a3b7f6b26b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Ahora hacemos el balance de blancos con un iluminante (D50)"
+   ]
   },
   {
    "cell_type": "code",
@@ -506,17 +476,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<Figure size 640x480 with 1 Axes>,\n",
-       " <AxesSubplot:title={'center':'CIE xy (0.34565944678321503, 0.3586012528163923) - CIE Illuminant D Series - CIE 1931 2$^\\\\circ$ Standard Observer'}, xlabel='Wavelength $\\\\lambda$ (nm)', ylabel='Spectral Distribution'>)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -525,7 +484,7 @@
     "\n",
     "sd = colour.sd_CIE_illuminant_D_series(xy)  \n",
     "\n",
-    "cplt.plot_single_sd(sd)"
+    "cplt.plot_single_sd(sd);"
    ]
   },
   {
