--- a/Visualización-2.ipynb
+++ b/Visualización-2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "05cb9eea-e563-4570-9b03-6efe113cbbc3",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "88d64dee-f8e3-4998-8497-47e793344ac3",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "c2dc7c46-7a3a-4cd8-a120-710616b0cd2c",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "460bd4af-87b9-487d-aa18-f70cb8a9298f",
    "metadata": {},
    "outputs": [],
@@ -106,12 +106,14 @@
    "id": "a4a68e8b-1613-4177-8d13-56369487cfe8",
    "metadata": {},
    "source": [
-    "### Luces"
+    "### Luces\n",
+    "\n",
+    "Vamos a situar las luces sobre las cámaras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "86a64835-2cb7-498b-a84e-475e595b323f",
    "metadata": {},
    "outputs": [],
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "c53a8f8d-af11-4683-9e17-09066e4f73b5",
    "metadata": {},
    "outputs": [],
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "13f0f285-1139-411a-a259-a91312cf0006",
    "metadata": {},
    "outputs": [],
@@ -174,7 +176,7 @@
     "renderWindow = vtkRenderWindow()\n",
     "\n",
     "renderWindow.SetSize(rendererSize * xGridDimensions, rendererSize * yGridDimensions)\n",
-    "renderWindow.SetWindowName('Modificando Cámaras')\n",
+    "renderWindow.SetWindowName('Luces fijas con Cámaras')\n",
     "\n",
     "for i in range(xGridDimensions*yGridDimensions):\n",
     "    renderWindow.AddRenderer(renderList[i])\n",
@@ -184,12 +186,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "1b178142-2761-4490-b7f2-c6174674f779",
+   "execution_count": null,
+   "id": "3d7ff747-9e32-4689-a448-13b719d0556d",
    "metadata": {},
    "outputs": [],
    "source": [
     "del renderWindow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90ae44d8-e2b5-4c0f-aec8-eeceaea7610c",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a hacer la cámara del segundo render fija para los otros dos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "10816b4b-580b-4439-811a-d41aca03bcae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lightList[0].SetPosition(lightList[1].GetPosition())\n",
+    "lightList[2].SetPosition(lightList[1].GetPosition())\n",
+    "\n",
+    "rendererSize = 256\n",
+    "renderWindow2 = vtkRenderWindow()\n",
+    "\n",
+    "renderWindow2.SetSize(rendererSize * xGridDimensions, rendererSize * yGridDimensions)\n",
+    "renderWindow2.SetWindowName('Luz fija con segunda cámara')\n",
+    "\n",
+    "for i in range(xGridDimensions*yGridDimensions):\n",
+    "    renderWindow2.AddRenderer(renderList[i])\n",
+    "    \n",
+    "\n",
+    "renderWindow2.Render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e052d139-bd0c-4627-877a-96054bc3fdc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del renderWindow2"
    ]
   },
   {
