--- a/Visualización-2.ipynb
+++ b/Visualización-2.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3d7ff747-9e32-4689-a448-13b719d0556d",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
