--- a/vtk-WalkCow.ipynb
+++ b/vtk-WalkCow.ipynb
@@ -437,17 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fb877588-2923-40d9-9c51-75bfba5a3d2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'images/cow.obj'"
+    "file_name = 'images/cow.g'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cbb4bf02-a2a4-4a13-8dc8-0b4772e3c506",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "9b22d982-a9e4-4fbc-81f4-a2b4f1b60be6",
    "metadata": {},
    "outputs": [],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2030ea97-7295-452f-bae5-c79542f080a5",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
