--- a/vtk-Tutorial_6.ipynb
+++ b/vtk-Tutorial_6.ipynb
@@ -202,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
