--- a/vtk-Tutorial_3.ipynb
+++ b/vtk-Tutorial_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "7d037abd-6be2-4ae4-9af5-781eeafaa4f5",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "c01b9826-4ddd-4285-9ca6-a117e9cf59eb",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "d9ab1a5d-9272-49aa-b947-475ed1c51cb2",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "be62dd3a-66ad-4eb3-96a6-b0de3a434607",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "f48291d3-782a-408d-bd7e-c7a58bee741b",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "a2c67463-62ff-4367-812c-0c288c1173e7",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "faa111df-d9fe-4984-9604-40299242d7e4",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "fda1fe36-42fd-467c-944c-dba83c312a8a",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "6e1aa0bf-995c-4260-a160-8d5e0a292e06",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "df6399f2-cbfb-420d-ab9c-e96dd29b7187",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
