--- a/vtk-Tutorial_1.ipynb
+++ b/vtk-Tutorial_1.ipynb
@@ -58,14 +58,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkConeSource (000002AA2653BB10)\n",
+      "vtkConeSource (000001AD6D36D3E0)\n",
       "  Debug: Off\n",
       "  Modified Time: 98\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Executive: 000002AA260F7670\n",
+      "  Executive: 000001AD6BBF86D0\n",
       "  ErrorCode: No error\n",
-      "  Information: 000002AA266B4C60\n",
+      "  Information: 000001AD6D345EE0\n",
       "  AbortExecute: Off\n",
       "  Progress: 0\n",
       "  Progress Text: (None)\n",
@@ -80,12 +80,12 @@
       "\n",
       "Clase:  <class 'vtkmodules.vtkCommonDataModel.vtkPolyData'> \n",
       "\n",
-      "vtkPolyData (000002AA24EC94C0)\n",
+      "vtkPolyData (000001AD6BA15560)\n",
       "  Debug: Off\n",
       "  Modified Time: 205\n",
       "  Reference Count: 2\n",
       "  Registered Events: (none)\n",
-      "  Information: 000002AA266B6BE0\n",
+      "  Information: 000001AD6D336510\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
       "  UpdateTime: 206\n",
@@ -105,10 +105,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (000002AA266AF630)\n",
+      "        vtkObserver (000001AD6D498720)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 000002AA250C87A0\n",
+      "          Command: 000001AD6BAE7120\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -134,10 +134,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (000002AA266AF330)\n",
+      "        vtkObserver (000001AD6D498240)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 000002AA250C87A0\n",
+      "          Command: 000001AD6BAE7120\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -164,7 +164,7 @@
       "  Compute Time: 218\n",
       "  Editable: false\n",
       "  Number Of Points: 11\n",
-      "  Point Coordinates: 000002AA266EBCE0\n",
+      "  Point Coordinates: 000001AD6D241EB0\n",
       "  PointLocator: 0000000000000000\n",
       "  CellLocator: 0000000000000000\n",
       "  Number Of Vertices: 0\n",
@@ -321,7 +321,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
