actualización comienzo de curso 23-24

--- a/OBJImporter.ipynb
+++ b/OBJImporter.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1835d402-4caf-419d-9b97-2d63d1b0e999",
+   "execution_count": 10,
+   "id": "54adead0-143a-408e-aa03-52c119ee6784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,30 +22,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "02fb72fb-cce1-4da8-a10f-36e1a7557720",
+   "execution_count": 11,
+   "id": "85d1ac4e-1cdd-4645-8b78-f2cfe5b65300",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fileName = 'data/iflamingo.3ds'"
+    "fileName    = 'data/D0401253.obj'\n",
+    "mtlfileName = 'data/D0401253.mtl'\n",
+    "textPath    = 'data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "90ad786c-d3c7-411f-aff2-e2125140bcc4",
+   "execution_count": 12,
+   "id": "98e94c31-d60e-4081-8d43-f03a5d406e54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "importer = vtk3DSImporter()\n",
+    "importer = vtkOBJImporter()\n",
     "importer.SetFileName(fileName)\n",
-    "importer.ComputeNormalsOn()"
+    "importer.SetFileNameMTL(mtlfileName)\n",
+    "importer.SetTexturePath(textPath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "951b6624-5c09-4e68-a3e9-bbeb5559126a",
+   "execution_count": 13,
+   "id": "09429c25-fd1f-4385-8166-4041c3f5e310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e3379189-cf16-4d80-a864-0ce2049f76de",
+   "execution_count": 14,
+   "id": "ccf049dd-9dab-4084-afe0-ea04481f4012",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 33 actors.\n"
+      "There are 4 actors.\n"
      ]
     }
    ],
@@ -72,9 +75,6 @@
     "iren = vtkRenderWindowInteractor()\n",
     "\n",
     "renWin.AddRenderer(renderer)\n",
-    "renderer.SetBackground2(colors.GetColor3d('Gold'))\n",
-    "renderer.SetBackground(colors.GetColor3d('Wheat'))\n",
-    "renderer.GradientBackgroundOn()\n",
     "\n",
     "iren.SetRenderWindow(renWin)\n",
     "importer.SetRenderWindow(renWin)\n",
@@ -103,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1f849056-97a5-41e0-8bb8-8994b7cc2687",
+   "execution_count": 15,
+   "id": "6d424af9-bd73-43a4-90fa-da09b5355673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75dde53d-dfb7-4b82-ae7f-49de1359bc24",
+   "id": "b4add76a-30ba-4925-810e-0b25384abf36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afb71eba-3e84-4191-bba8-fd2bc67267d1",
    "metadata": {},
    "outputs": [],
    "source": []
