--- a/EjercicioPráctico.ipynb
+++ b/EjercicioPráctico.ipynb
@@ -115,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jra] *",
+   "display_name": "Python [conda env:jra]",
    "language": "python",
    "name": "conda-env-jra-py"
   },
